# Compiler-s_project

./: README.md
lexer/: Logic_code.cpp
parser/: README.md  parse_tree.txt  parser_logic.cpp  simple_parser.cpp  test.py  test_tokens.txt  tokens.txt
project/src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
project/src/lexer/: lexer.cpp  lexer.hpp  lexer_test.cpp  token.hpp
project/src/symbol_table/: STable.cpp  STable.hpp  symbol_table_test.cpp
src/: Main_Code_On_Terminal.cpp  Main_GUI_Code.cpp
